force-app/main/default/objects/TC_OpportunityLineItem__x/TC_OpportunityLineItem__x.object-meta.xml
<CustomObject>
    <description>Read / Write replica of OPTYs from TC SFDC Instance</description>
    <externalDataSource>TC_Production</externalDataSource>
    <externalName>OpportunityLineItem</externalName>
    <label>TC Opportunity Product</label>
    <pluralLabel>TC Opportunity Product</pluralLabel>
</CustomObject>