force-app/main/default/objects/TC_OpportunityLineItem__x/fields/AH_Product_Price_Book_Entry_Id_c__c.field-meta.xml
<CustomField>
    <fullName>AH_Product_Price_Book_Entry_Id_c__c</fullName>
    <externalDeveloperName>AH_Product_Price_Book_Entry_Id__c</externalDeveloperName>
    <label>AH Product Price Book Entry Id</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>