force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Bonus_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Amount_c__c</fullName>
    <externalDeveloperName>Bonus_Amount__c</externalDeveloperName>
    <label>Bonus Amount</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>