force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Combo_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Combo_ID_c__c</fullName>
    <externalDeveloperName>Combo_ID__c</externalDeveloperName>
    <inlineHelpText>Concatenation of Opportunity Owner, year of Forecast Date, contract type and product that may relate to a P2G Goal record</inlineHelpText>
    <label>Combo ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>