force-app/main/default/objects/TC_OpportunityLineItem__x/fields/CPP_Discount_c__c.field-meta.xml
<CustomField>
    <fullName>CPP_Discount_c__c</fullName>
    <externalDeveloperName>CPP_Discount__c</externalDeveloperName>
    <label>CPP Discount</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>