force-app/main/default/objects/TC_OpportunityLineItem__x/fields/CSM_RES_WEB_MEDIA_Assigned_c__c.field-meta.xml
<CustomField>
    <fullName>CSM_RES_WEB_MEDIA_Assigned_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>CSM_RES_WEB_MEDIA_Assigned__c</externalDeveloperName>
    <label>CSM RES/WEB/MEDIA Assigned</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>