force-app/main/default/objects/TC_OpportunityLineItem__x/fields/CurrencyConverted_c__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConverted_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>CurrencyConverted__c</externalDeveloperName>
    <label>CurrencyConverted</label>
    <type>Checkbox</type>
</CustomField>