force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>