force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Goal_Tracking_User_c__c.field-meta.xml
<CustomField>
    <fullName>Goal_Tracking_User_c__c</fullName>
    <externalDeveloperName>Goal_Tracking_User__c</externalDeveloperName>
    <label>Goal Tracking User</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>