force-app/main/default/objects/TC_OpportunityLineItem__x/fields/ID18_Account_c__c.field-meta.xml
<CustomField>
    <fullName>ID18_Account_c__c</fullName>
    <externalDeveloperName>ID18_Account__c</externalDeveloperName>
    <label>ID18 Account</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>