force-app/main/default/objects/TC_OpportunityLineItem__x/fields/List_Price_Contract_Currency_c__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Contract_Currency_c__c</fullName>
    <externalDeveloperName>List_Price_Contract_Currency__c</externalDeveloperName>
    <label>List Price (Contract Currency)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>