force-app/main/default/objects/TC_OpportunityLineItem__x/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <externalDeveloperName>ListPrice</externalDeveloperName>
    <label>List Price</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>