force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Market_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Market_ID_c__c</fullName>
    <externalDeveloperName>Market_ID__c</externalDeveloperName>
    <label>Market ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>