force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Market_OppName_c__c.field-meta.xml
<CustomField>
    <fullName>Market_OppName_c__c</fullName>
    <externalDeveloperName>Market_OppName__c</externalDeveloperName>
    <label>Market-OppName</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>