force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Opportunity_Stage_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_c__c</fullName>
    <externalDeveloperName>Opportunity_Stage__c</externalDeveloperName>
    <label>Opportunity Stage</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting QA</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract (Renewal)</fullName>
            </value>
            <value>
                <fullName>Demo (IVH)</fullName>
            </value>
            <value>
                <fullName>Demo (NSub/GDS)</fullName>
            </value>
            <value>
                <fullName>Demo (Renewal)</fullName>
            </value>
            <value>
                <fullName>ID Decision Maker (IVH)</fullName>
            </value>
            <value>
                <fullName>ID Decision Maker (NSub/GDS)</fullName>
            </value>
            <value>
                <fullName>ID Decision Maker (Renewal)</fullName>
            </value>
            <value>
                <fullName>Information Needed</fullName>
            </value>
            <value>
                <fullName>Negotiation/Review (IVH)</fullName>
            </value>
            <value>
                <fullName>Negotiation/Review (NSub/GDS)</fullName>
            </value>
            <value>
                <fullName>Negotiation/Review (Renewal)</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Pre-Contract (Renewal)</fullName>
            </value>
            <value>
                <fullName>Proposal / Contract (IVH)</fullName>
            </value>
            <value>
                <fullName>Prospecting (IVH)</fullName>
            </value>
            <value>
                <fullName>Prospecting (NSub/GDS)</fullName>
            </value>
            <value>
                <fullName>Qualification (IVH)</fullName>
            </value>
            <value>
                <fullName>Qualification (NSub/GDS)</fullName>
            </value>
            <value>
                <fullName>Qualification (Renewal)</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Quote / Contract (NSub/GDS)</fullName>
            </value>
            <value>
                <fullName>Submit to Media Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>