force-app/main/default/objects/TC_OpportunityLineItem__x/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <externalDeveloperName>OpportunityId</externalDeveloperName>
    <label>Opportunity ID</label>
    <length>18</length>
    <referenceTo>TC_Opportunity__x</referenceTo>
    <relationshipLabel>TC Opportunity Product</relationshipLabel>
    <relationshipName>TC_Opportunity_Product</relationshipName>
    <type>ExternalLookup</type>
</CustomField>