force-app/main/default/objects/TC_OpportunityLineItem__x/fields/P2G_Product_Goal_Progress_c__c.field-meta.xml
<CustomField>
    <fullName>P2G_Product_Goal_Progress_c__c</fullName>
    <externalDeveloperName>P2G_Product_Goal_Progress__c</externalDeveloperName>
    <inlineHelpText>Percent of Product Goal for this line item</inlineHelpText>
    <label>P2G Product Goal Progress</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>