force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Price_with_CPP_USD_c__c.field-meta.xml
<CustomField>
    <fullName>Price_with_CPP_USD_c__c</fullName>
    <externalDeveloperName>Price_with_CPP_USD__c</externalDeveloperName>
    <label>Price with CPP (USD)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>