force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Pricebook_Entry_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_ID_c__c</fullName>
    <externalDeveloperName>Pricebook_Entry_ID__c</externalDeveloperName>
    <label>Pricebook Entry ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>