force-app/main/default/objects/TC_OpportunityLineItem__x/fields/PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntryId__c</fullName>
    <externalDeveloperName>PricebookEntryId</externalDeveloperName>
    <label>Price Book Entry ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>