force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Probability_Weighted_Forecast_c__c.field-meta.xml
<CustomField>
    <fullName>Probability_Weighted_Forecast_c__c</fullName>
    <externalDeveloperName>Probability_Weighted_Forecast__c</externalDeveloperName>
    <inlineHelpText>Percentage of the Sales Credit Amount depending on the Opportunity Stage. Prospecting = 6%, Introducing = 3%, Qualifying = 4%, Solutioning = 8%, Proposing = 8%, Negotiating = 10%, Awaiting QA = 100%, Information Needed = 100%, Closed Won = 100%.</inlineHelpText>
    <label>Probability Weighted Forecast</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>