force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Q2C_Non_Renewable_c__c.field-meta.xml
<CustomField>
    <fullName>Q2C_Non_Renewable_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Q2C_Non_Renewable__c</externalDeveloperName>
    <label>Q2C_Non-Renewable</label>
    <type>Checkbox</type>
</CustomField>