force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <externalDeveloperName>Quantity</externalDeveloperName>
    <label>Quantity</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>