force-app/main/default/objects/TC_OpportunityLineItem__x/fields/R90_RegionName_c__c.field-meta.xml
<CustomField>
    <fullName>R90_RegionName_c__c</fullName>
    <externalDeveloperName>R90_RegionName__c</externalDeveloperName>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>