force-app/main/default/objects/TC_OpportunityLineItem__x/fields/R90_Revenue_Unit_Price_c__c.field-meta.xml
<CustomField>
    <fullName>R90_Revenue_Unit_Price_c__c</fullName>
    <externalDeveloperName>R90_Revenue_Unit_Price__c</externalDeveloperName>
    <label>R90 Revenue Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>