force-app/main/default/objects/TC_OpportunityLineItem__x/fields/R90_Sales_Quantity_c__c.field-meta.xml
<CustomField>
    <fullName>R90_Sales_Quantity_c__c</fullName>
    <externalDeveloperName>R90_Sales_Quantity__c</externalDeveloperName>
    <label>R90 Sales Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>