force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Renewal_Base_Amount_USD_Product_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Base_Amount_USD_Product_c__c</fullName>
    <externalDeveloperName>Renewal_Base_Amount_USD_Product__c</externalDeveloperName>
    <inlineHelpText>The amount stored in the renewal base for this Opportunity Product (in USD) - Net</inlineHelpText>
    <label>Renewal Base Amount (USD) - Product</label>
    <precision>14</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>