force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Renewal_Base_ID_Product_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Base_ID_Product_c__c</fullName>
    <externalDeveloperName>Renewal_Base_ID_Product__c</externalDeveloperName>
    <label>Renewal Base ID - Product</label>
    <length>25</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>