force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Renewal_Manager_Assigned_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Manager_Assigned_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Renewal_Manager_Assigned__c</externalDeveloperName>
    <label>Renewal Manager Assigned</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>