force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Renewal_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Manager_c__c</fullName>
    <externalDeveloperName>Renewal_Manager__c</externalDeveloperName>
    <inlineHelpText>Renewal Manager assigned in Account&gt;Account Support Members</inlineHelpText>
    <label>Renewal Manager</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>