force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Sales_Credit_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Credit_Amount_c__c</fullName>
    <externalDeveloperName>Sales_Credit_Amount__c</externalDeveloperName>
    <label>Sales Credit Amount</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>