force-app/main/default/objects/TC_OpportunityLineItem__x/fields/Sales_Credit_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Credit_Date_c__c</fullName>
    <externalDeveloperName>Sales_Credit_Date__c</externalDeveloperName>
    <label>Sales Credit Date - Original</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>