force-app/main/default/objects/TC_OpportunityLineItem__x/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <externalDeveloperName>ServiceDate</externalDeveloperName>
    <label>Date</label>
    <type>Date</type>
</CustomField>